# email-rag-bot

./: README.md
email-rag-4/: .dockerignore  .env.example  .env.prod  .env.prod.example  .gitignore  CLAUDE.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  mkdocs.yml  plan.md
email-rag-4/.claude/: settings.local.json
email-rag-4/backend/: .dockerignore  Dockerfile  Dockerfile.dev  Dockerfile.prod  README.md  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt  reset_password.py
email-rag-4/backend/alembic/: env.py
email-rag-4/backend/alembic/versions/: 20240111_000000_001_initial_schema.py  20240112_000000_002_add_llm_settings.py
email-rag-4/backend/app/: config.py  main.py
email-rag-4/backend/app/api/: __init__.py  deps.py
email-rag-4/backend/app/api/v1/: __init__.py  router.py
email-rag-4/backend/app/api/v1/endpoints/: __init__.py  auth.py  emails.py  forensic.py  rag.py  search.py  stats.py  upload.py  users.py  ws.py
email-rag-4/backend/app/core/: __init__.py  cache.py  realtime.py  security.py  websocket.py
email-rag-4/backend/app/db/: __init__.py  base.py  session.py
email-rag-4/backend/app/db/models/: __init__.py  attachment.py  email.py  evidence.py  llm_settings.py  processing_task.py  user.py
email-rag-4/backend/app/schemas/: __init__.py  auth.py  email.py  rag.py  search.py  upload.py  user.py
email-rag-4/backend/app/services/: __init__.py  attachment_processor.py  email_service.py  embedding_service.py  llm_settings_service.py  pst_processor.py  query_processor.py  rag_service.py  retrieval_service.py  search_service.py  user_service.py  vector_store.py
email-rag-4/backend/app/services/llm/: __init__.py  anthropic_provider.py  base.py  cerebras_provider.py  custom_provider.py  factory.py  google_provider.py  groq_provider.py  openai_provider.py  xai_provider.py
email-rag-4/backend/app/workers/: __init__.py  celery_app.py  email_tasks.py  indexing_tasks.py
email-rag-4/backend/tests/: conftest.py
email-rag-4/backend/tests/test_api/: test_auth.py
email-rag-4/backend/tests/test_services/: test_security.py  test_user_service.py
email-rag-4/docs/: GAP_ANALYSIS.md  index.md
email-rag-4/docs/api/: rest.md  websocket.md
email-rag-4/docs/architecture/: database.md  forensic.md  overview.md  performance.md  rag-engine.md
email-rag-4/docs/implementation/: setup.md  structure.md  tech-stack.md
email-rag-4/docs/requirements/: functional.md  non-functional.md  overview.md  user-stories.md
email-rag-4/frontend/: .dockerignore  .eslintrc.cjs  Dockerfile  Dockerfile.dev  Dockerfile.prod  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
email-rag-4/frontend/src/: App.tsx  index.css  main.tsx  theme.ts
email-rag-4/frontend/src/components/: index.ts
email-rag-4/frontend/src/components/layout/: AuthLayout.tsx  Header.test.tsx  Header.tsx  MainLayout.tsx  Sidebar.test.tsx  Sidebar.tsx  index.ts
email-rag-4/frontend/src/hooks/: index.ts  useConnectionStatus.ts  useTaskProgress.ts
email-rag-4/frontend/src/pages/: Chat.tsx  Dashboard.tsx  EmailView.tsx  Forensic.test.tsx  Forensic.tsx  Login.test.tsx  Login.tsx  NotFound.tsx  Register.tsx  Search.tsx  Settings.tsx  Upload.tsx  index.ts
email-rag-4/frontend/src/services/: api.ts  index.ts  websocket.ts
email-rag-4/frontend/src/store/: authStore.ts  index.ts
email-rag-4/frontend/src/test/: setup.ts  test-utils.tsx
email-rag-4/frontend/src/types/: index.ts
email-rag-4/frontend/src/utils/: index.ts
email-rag-4/helm/helm-common/: Chart.yaml  README.md  values.yaml
email-rag-4/helm/helm-common/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  globalKongPlugin.yaml  hpa.yaml  httpRoute.yaml  httpsRoute2.yaml  httpsRoute3.yaml  ingress2.yaml  ingress3.yaml  ingress4.yaml  istio-destinationrule.yaml  istio-virtualservice.yaml  keda-autoscale.yaml  kong-ingress.yaml  kong-plugin.yaml  pdb.yaml  pv.yaml  pvc.yaml  secret.yaml  service-monitor.yaml  service.yaml  serviceaccount.yaml
email-rag-4/helm/helm-common/templates/tests/: test-connection.yaml
email-rag-4/helm/k8s-deployment/: DEPENDENCIES_VERIFICATION.md  k8s-shared-pvc.yaml  k8s-values-celery-worker.yaml  k8s-values-frontend.yaml
email-rag-4/k8s-deployment/: DOCKER_TO_K8S_MIGRATION.md  K8S_DEPLOYMENT_CHECKLIST.md  VERIFICATION_REPORT.md  deploy-k8s.sh  k8s-dependencies.yaml  k8s-secrets-app.yaml  k8s-secrets.yaml  k8s-values-celery-worker.yaml  k8s-values-frontend.yaml  k8s-values.yaml
email-rag-4/nginx/: nginx.prod.conf
email-rag-4/scripts/: backup.sh  deploy.sh  init-db.sql  setup.bat  setup.sh
